# foundry-rust-template

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: contracts.yml  rust.yml
app/: Cargo.toml
app/src/: main.rs
bindings/: Cargo.toml
bindings/src/: console.rs  console_2.rs  contract.rs  contract_test.rs  counter.rs  ds_test.rs  lib.rs  my_contract.rs  std_error.rs  std_math.rs  std_storage.rs  test.rs  vm.rs
contracts/: foundry.toml
contracts/src/: Contract.sol
crates/bindings/: Cargo.toml
crates/bindings/src/: counter.rs  lib.rs
